--- a/ono-tebe-nado/styles/style.css
+++ b/ono-tebe-nado/styles/style.css
@@ -1,133 +1,4 @@
-.menu {
-  flex-shrink: 0;
-}
-
-.menu__links-list {
-  display: flex;
-  gap: 32px;
-}
-
-.menu__links-list-item {
-  list-style: circle;
-}
-
-.menu__links-list-item:first-child {
-  list-style: none;
-}
-
-.menu__link {
-  border-bottom: 1px solid #000;
-  padding-bottom: 2px;
-  font-size: 18px;
-  text-decoration: none;
-}
-
-.menu__link_active {
-  border-bottom: none;
-}
-
-
-.contacts-list {
-  width: 240px;
-}
-
-.contacts-list-item {
-  border-bottom: 1px solid #000;
-  font-size: 18px;
-  line-height: 24.3px;
-  text-decoration: none;
-}
-
-.contacts__address {
-  border-bottom: none;
-  font-style: normal;
-}
-
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0.6;
-  background: #000;
-}
-
-
-.aligned-text_center {
-  display: block;
-  text-align: center;
-}
-
-.aligned-text_right {
-  display: block;
-  text-align: right;
-}
-
-
-.letter-spacing-extended {
-  letter-spacing: 60px;
-}
-
-.no-letter-spacing {
-  letter-spacing: 0;
-}
-
-
-.bet-button {
-  width: 257px;
-  height: 52px;
-  border: 1px solid #fff;
-  padding: 12px 32px;
-  color: #fff;
-  font-size: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: transparent;
-}
-
-
-.card {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-}
-
-.card-content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-sizing: border-box;
-  height: 100%;
-  padding: 50px 40px;
-  color: #fff;
-}
-
-.card-content__title {
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 120%;
-  text-decoration-line: underline;
-  text-transform: uppercase;
-}
-
-.card-content__text {
-  font-size: 20px;
-  line-height: 120%;
-}
+@import url(./common-style.css);
+@import url(./header-style.css);
+@import url(./main-content-style.css);
+@import url(./footer-style.css);
